--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 <body>
 
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap');
 </style>
 
 <div class = "wrapper">
-<div class = "box_1">
 
-<img src="kiwi.jpg" alt="kiwi" width="1370" height="200">
+<div class = "box_1">
+<img src="banner.jpg" alt="kiwi" width="1370" height="200">
 
 </div>
 
@@ -24,7 +26,7 @@
 	<button class = "dropbtn"><a href>Wildlife</a></button>
 		<div class = "dropdown-content">
 		<a href = "birds.html">Birds</a>
-		<a href = "creepy crawlies">Creepy crawlies</a>
+		<a href = "creepycrawlies.html">Creepy crawlies</a>
 		<a href >Fish and crustaceans</a>
 		</div>
 </div>
@@ -32,19 +34,26 @@
 	<a href>Contact</a>	
 </div>
 <div class = "box_2">
-
+	<iframe width="385" height="315" src="https://www.youtube.com/embed/t3sn-EQFVWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="385" height="315" src="https://www.youtube.com/embed/QOumuhUzFf0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </div>
-<div class = "box_3">Box 3 </div>
+ 
+<div class = "box_3">
+<div id="myDIV"></div>
+ </div>
+
+
 <div class = "box_4">
 <h1>National Parks</h1>
 <p>Tongariro was New Zealand’s first national park. The mountain peaks of Tongariro, Ngauruhoe and Ruapehu were a gift from Ngati Tuwharetoa in 1887. This was 15 years after the world’s first national park, Yellowstone was created in the United States.</p>
 <p>National parks are places set aside to protect natural landscapes and native plants and animals forever. 
 They are really big – 10,000 hectares or more. Protection comes first but they are also places for people to enjoy. 
 GO visit some of them (just don’t damage them), We also have underwater national parks - they are called marine reserves!</p>
-
-
+<img src="mountain.jpg" alt="Tongariro" width="300" height="200">
+<img src="marine.jpg" alt="marine Reserve" width="300" height="200">
  </div>
-<div class = "box_5">copyright :) </div>
+ 
+<div class = "box_5">© 2022 Jenelle Ryan </div>
 
 
 </div>
